<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wheres My Stuff</string>

    <style name="MyTheme.NoTitleBar.CustomBackground" parent="@android:Theme.Black">
        <item name="android:windowBackground">@drawable/load</item>
        <item name="android:windowNoTitle">true</item>
        <item name="android:windowFullscreen">true</item>
        <item name="android:windowContentOverlay">@null</item>
    </style>

    <string name="edit_firstName">&quot;First Name&quot;</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_lost">Lost</string>
    <string name="menu_find">Found</string>
    <string name="menu_admin">Admin</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="button_Name">Name</string>
    <string name="button_Category">Category</string>
    <string name="button_Lost">Lost</string>
    <string name="button_List">List</string>
    <string name="button_Found">Found</string>
    <string name="button_Ok">OK</string>
    <string name="button_search">Search</string>
    <string name="button_register">&quot;Register&quot;</string>
    <string name="button_home">&quot;I have lost something&quot;</string>
    <string name="button_home3">&quot;I have found something&quot;</string>
    <string name="edit_lastName">&quot;Last Name&quot;</string>
    <string name="register_button">Register</string>
    <string name="edit_email">Email</string>
    <string name="item_name">Name</string>
    <string name="item_status">Status</string>
    <string name="item_category">Category</string>
    <string name="item_date">Date</string>
    <string name="edit_password">Password</string>
    <string name="loststuff_name">Name of Your Lost Item</string>
    <string name="loststuff_submit">Submit</string>
    <string name="LostStuff">Lost Stuff Information</string>
    <string name="loststuff_loc">Where did you last see your item?</string>
    <string name="loststuff_cat">Category of Your Item</string>
    <string name="loststuff_date">When did you lose it? (yyyy/mm/dd)</string>
    <string name="loststuff_cancel">Cancel</string>
    <string name="loststuff_prize">Any reward for getting back this stuff?</string>
    <string name="loststuff_title">Lost Stuff Information</string>
    <string name="loststuff_status">Lost Stuff Status</string>
    <string name="loststuff_disc">Lost Stuff Description</string>
    <string name="find_status">Found Stuff Status</string>
    <string name="find_name">Name of Your Found Item</string>
    <string name="find_submit">Submit</string>
    <string name="FindStuff">Found Stuff Information</string>
    <string name="find_loc">Where did you find this item?</string>
    <string name="find_date">When did you find it? (yyyy/mm/dd)</string>
    <string name="find_cancel">Cancel</string>
    <string name="find_prize">Ask reward for giving back this stuff?</string>
    <string name="find_title">Found Stuff Information</string>
    <string name="button_home2">Log out</string>
    <string name="loststuff_logout">Log out</string>
    <string name="find_logout">Log out</string>
    <string name="liststuff_logout">Log out</string>
    <string name="liststuff_filter">Filter</string>
    <string name="liststuff_addItem">Add Item</string>
    <string name="liststuff_match">Match</string>   
    <string name="liststuff_search">Search</string>   
    <string name="admin_makeAdmin">Make Admin</string>
    <string name="admin_removeUser">Remove User</string>
    <string name="admin_lockUser">Lock User</string>
    <string name="admin_unlockUser">Unlock User</string>
    <string name="admin_label">User to Modify</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="home_logOut">Logout</string>
    <string name="category_prompt">Choose a category</string>
    <string name="match_logout">Log out</string>
    <string-array name="category_arrays">
        <item>Furnitures</item>
        <item>Personal Items</item>
        <item>Appliances</item>
    </string-array>

</resources>