<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/liststuff_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/liststuff_filter" />

        <Button
            android:id="@+id/liststuff_addItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/liststuff_filter"
            android:text="@string/liststuff_addItem" />

        <Button
            android:id="@+id/liststuff_match"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/liststuff_addItem"
            android:text="@string/liststuff_match" />

        <Button
            android:id="@+id/liststuff_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/liststuff_match"
            android:text="@string/liststuff_search" />

    </RelativeLayout>

    <ListView
        android:id="@+id/listview"
        android:layout_width="fill_parent"
        android:layout_height="360dp" />

    <Button
        android:id="@+id/liststuff_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/liststuff_logout" />

</LinearLayout>