<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/searchText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btnSearchForItems"
            android:layout_alignBottom="@+id/btnSearchForItems"
            android:layout_toLeftOf="@+id/btnSearchForItems"
            android:ems="10"
            android:inputType="text" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/btnSearchForItems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/button_search" />
    </RelativeLayout>

        <RadioGroup
            android:id="@+id/radioSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="19dp" >
			
            <RadioButton
                android:id="@+id/radioName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/button_Name" />

            <RadioButton
                android:id="@+id/radioCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_Category" />
           
        </RadioGroup>

    <TextView
        android:id="@+id/text1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp" />

    <RadioGroup
        android:id="@+id/radioStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radioLOST"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/button_Lost" />

        <RadioButton
            android:id="@+id/radioFOUND"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_Found" />
    </RadioGroup>

    <TextView
        android:id="@+id/text2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/category_arrays"
        android:prompt="@string/category_prompt" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp" />

    <DatePicker
        android:id="@+id/datepicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="showDatePickerDialog" />

    <Button
        android:id="@+id/dialogButtonOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_Ok" />

    <RelativeLayout>
    </RelativeLayout>

</LinearLayout>