<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:fillViewport="true">
  <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:background="#fff">
 
        <!--  Header  Starts-->
        <LinearLayout android:id="@+id/header"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@layout/header_gradient"
                android:paddingTop="1dip"
                android:paddingBottom="1dip">
                
        </LinearLayout>
        <!--  Header Ends -->
 
        <!-- Registration Form -->
        <LinearLayout
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="10dip"
          android:layout_below="@id/header">
          <!-- Stuff Name Label -->
          <Button
                android:id="@+id/find_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="230dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="10dp"
                android:text="@string/find_logout" /> 
          <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:text="@string/find_name"/>
          <EditText android:id="@+id/find_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:singleLine="true"
                android:layout_marginBottom="20dip"
                android:inputType="textNoSuggestions"/>
          <!--  Location Label -->
          <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:text="@string/find_loc"/>
          <EditText 
                android:id="@+id/find_loc"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:singleLine="true"
                android:layout_marginBottom="20dip"
                android:inputType="textNoSuggestions"/>
          <!-- Discription Label -->
          <TextView 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:text="@string/find_date"/>
          <EditText android:id="@+id/find_date"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:layout_marginTop="5dip"
                android:inputType="datetime"/>

   
          <!-- Register Button -->
          
          <Spinner android:id="@+id/spinner"

              android:layout_height="wrap_content"
              android:layout_width="fill_parent"/>
           <Spinner android:id="@+id/spinner1"

              android:layout_height="wrap_content"
              android:layout_width="fill_parent"/>

          <Button
              android:id="@+id/find_submit"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_marginLeft="42dp"
              android:layout_marginRight="42dp"
              android:layout_marginTop="10dp"
              android:text="@string/find_submit" />

          <Button
              android:id="@+id/find_cancel"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_marginLeft="42dp"
              android:layout_marginRight="42dp"
              android:layout_marginTop="10dp"
              android:text="@string/find_cancel" />
      
        </LinearLayout>
        <!-- Registration Form Ends -->
  </RelativeLayout>
</ScrollView>