<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff" >

        <!-- Header  Starts -->

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@layout/header_gradient" >

            <!-- Logo Start -->

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0.1dip"
                android:src="@drawable/logo" />
            <!-- Logo Ends -->
        </LinearLayout>
        <!-- Header Ends -->


        <!-- Login Form -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header"
            android:orientation="vertical"
            android:padding="1dip" >

            <!-- Lost button -->

            <Button
                android:id="@+id/btnHome"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dip"
                android:onClick="Ilostsomething"
                android:text="@string/button_home" />

            <Button
                android:id="@+id/btnHome3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dip"
                android:onClick="Ifindsomething"
                android:text="@string/button_home3" />

            <Button
                android:id="@+id/button_list"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dip"
                android:text="@string/button_List" />

            <Button
                android:id="@+id/logOutButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dip"
                android:text="@string/home_logOut" />
        </LinearLayout>
        <!-- Login Form Ends -->

        <Button
            android:id="@+id/adminButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="14dp"
            android:layout_marginRight="16dp"
            android:text="Admin" />
    </RelativeLayout>

</ScrollView>